--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.4.0"
     implementation "io.reactivex.rxjava2:rxandroid:2.0.2"
     implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'android.arch.lifecycle:extensions:1.1.1'
 
 }
